--- a/app/src/main/res/layout/activity_profile_neighbour.xml
+++ b/app/src/main/res/layout/activity_profile_neighbour.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ScrollView01"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C8C8C8"
     android:orientation="horizontal">
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/returnButton"
-        android:layout_width="66dp"
-        android:layout_height="91dp"
-        android:clickable="true"
-        tools:srcCompat="@android:drawable/ic_menu_revert" />
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
         <ImageView
             android:id="@+id/imageProfile"
             android:layout_width="match_parent"
             android:layout_height="275dp"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:srcCompat="@drawable/ic_launcher_background"
-            tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
+            android:scaleType="fitXY"
+ />
+
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/favoriteButton"
-            android:layout_width="66dp"
-            android:layout_height="91dp"
-            android:layout_marginLeft="335dp"
-            android:layout_marginTop="-33dp"
+            android:layout_width="200px"
+            android:layout_height="200px"
+            android:layout_marginTop="-120px"
             android:clickable="true"
-            tools:srcCompat="@drawable/ic_star_border_white_24dp" />
+            android:layout_marginRight="20px"
+            android:layout_gravity="right"
+            android:backgroundTint="#FFFF"
+            android:scaleType="fitXY"
+             />
 
         <RelativeLayout
-        android:layout_width="392dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="-20dp"
         android:layout_marginLeft="10dp"
@@ -47,20 +47,24 @@
         android:background="@color/cardview_light_background"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
             
             <TextView
+                android:id="@+id/nameNeighbour"
                 android:layout_width="match_parent"
                 android:layout_marginTop="20dp"
                 android:layout_height="70dp" 
                 android:text="Name of the neighbour"
+                android:textStyle="bold"
+                android:textSize="25dp"
                 />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="70dp"
-                android:text="Adress"
+                android:text="Adresse"
                 />
             <TextView
                 android:layout_width="match_parent"
@@ -76,36 +80,60 @@
                 />
         </RelativeLayout>
         <RelativeLayout
-        android:layout_width="392dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/cardview_light_background"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingRight="20dp"
+
+            >
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_marginTop="20dp"
                 android:layout_height="70dp"
                 android:text="A propos de moi"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textSize="25dp"
+
                 />
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="70dp"
                 android:layout_marginTop="70dp"
+                android:layout_marginBottom="70dp"
                 android:text="A propos de moi texte"
+
                 />
 
         </RelativeLayout>
-        
+
 </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/returnButton"
+        android:layout_width="200px"
+        android:layout_height="150px"
+        android:clickable="true"
+        android:scaleType="fitXY"
+        android:background="@android:color/transparent"
+        />
+
     <TextView
+        android:id="@+id/nameHeader"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:textSize="50dp"
         android:text="Prenom"
         android:textColor="@color/cardview_light_background"
         android:layout_marginTop="205dp" />
+
 </RelativeLayout>
+    </ScrollView>
