--- a/app/src/main/res/layout/activity_profile_neighbour.xml
+++ b/app/src/main/res/layout/activity_profile_neighbour.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:id="@+id/imageProfile"
             android:layout_width="match_parent"
-            android:layout_height="275dp"
+            android:layout_height="300dp"
             android:scaleType="centerCrop"
  />
 
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fabCustomSize="60dp"
-            android:layout_marginTop="-120px"
+            android:layout_marginTop="-20dp"
             android:clickable="true"
             android:layout_marginRight="20px"
             android:layout_gravity="right"
@@ -41,7 +41,7 @@
         <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="-20dp"
+        android:layout_marginTop="-30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/cardview_light_background"
@@ -149,8 +149,10 @@
 
     <ImageButton
         android:id="@+id/returnButton"
-        android:layout_width="200px"
-        android:layout_height="150px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:clickable="true"
         android:scaleType="fitXY"
         android:background="@android:color/transparent"
@@ -165,7 +167,7 @@
         android:text="Prenom"
         android:layout_marginLeft="10dp"
         android:textColor="@color/cardview_light_background"
-        android:layout_marginTop="205dp" />
+        android:layout_marginTop="230dp" />
 
 </RelativeLayout>
     </ScrollView>
