--- a/app/src/main/res/layout/activity_profile_neighbour.xml
+++ b/app/src/main/res/layout/activity_profile_neighbour.xml
@@ -1,53 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ScrollView01"
+    android:background="#C8C8C8"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#C8C8C8"
-    android:orientation="horizontal">
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:paddingHorizontal="5dp"
+        android:paddingTop="5dp"
+        android:background="#C8C8C8">
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-
-        <ImageView
-            android:id="@+id/imageProfile"
+        <android.support.v7.widget.CardView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:scaleType="centerCrop"
- />
+            android:layout_height="match_parent"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp" >
 
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/favoriteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabCustomSize="60dp"
-            android:layout_marginTop="-20dp"
-            android:clickable="true"
-            android:layout_marginRight="20px"
-            android:layout_gravity="right"
-            android:backgroundTint="#FFFF"
-             />
 
         <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="-30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:background="@color/cardview_light_background"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:orientation="vertical"
+
         >
 
             <ImageView
@@ -109,12 +103,18 @@
                 android:layout_marginLeft="40dp"
                 />
         </RelativeLayout>
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="3dp"
+            app:cardCornerRadius="4dp" >
+
         <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/cardview_light_background"
         android:paddingLeft="20dp"
@@ -144,30 +144,57 @@
                 />
 
         </RelativeLayout>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/favoriteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                app:fabCustomSize="60dp"
+                android:clickable="true"
+                android:layout_marginRight="15dp"
+                android:backgroundTint="#FFFF"
+                />
+        </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
-</LinearLayout>
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="256dp"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-    <ImageButton
-        android:id="@+id/returnButton"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:clickable="true"
-        android:scaleType="fitXY"
-        android:background="@android:color/transparent"
-        app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp"
-        />
+            <ImageView
+                android:id="@+id/imageProfile"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax" />
 
-    <TextView
-        android:id="@+id/nameHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:textSize="50dp"
-        android:text="Prenom"
-        android:layout_marginLeft="10dp"
-        android:textColor="@color/cardview_light_background"
-        android:layout_marginTop="230dp" />
+            <TextView
+                android:id="@+id/nameHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:textSize="50dp"
+                android:text="Prenom"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/cardview_light_background"
+                android:layout_marginTop="180dp" />
 
-</RelativeLayout>
-    </ScrollView>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/returnButton"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:navigationIcon="?attr/homeAsUpIndicator" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+</android.support.design.widget.CoordinatorLayout>
